--- a/Project3/assets/about.css
+++ b/Project3/assets/about.css
@@ -281,7 +281,7 @@ body {
     color: #fff;
     text-decoration: none;
     text-align: center;
-    padding: 0 30px;
+    padding: 0 1.875rem;
 }
 
 .Bottom a:hover {
