--- a/Project3/assets/works.css
+++ b/Project3/assets/works.css
@@ -148,7 +148,7 @@ body {
 .StoryBox {
     height: 13.3125rem;
     width: 22.5rem;
-    background-color: #8ab8da
+    background-color: #8ab8da;
 }
 
 .StoryImg {
